--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,6 +7,7 @@ phases:
   post_build:
     commands:
       - mvn package
+      - mv target/spring-petclinic-2.4.0.BUILD-SNAPSHOT.jar spring-petclinic.jar
 artifacts:
   files:
-    - target/spring-petclinic-2.4.0.BUILD-SNAPSHOT.jar
+    - spring-petclinic.jar
